# assignment_project

./: .gitignore  Dockerfile  db.sqlite3  docker_connect_server.sh  docker_deploy_script.sh  pyproject.toml
assignment_project/: asgi.py  settings.py  urls.py  wsgi.py
client/: .env.development  .gitignore  README.md  auto-imports.d.ts  components.d.ts  env.d.ts  (+9 more)
server/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.MD  docker_deploy_script.sh  manage.py  nginx.conf  pyproject.toml  runserver.sh  supervisor.conf
server/.github/workflows/: lint.yml  main.yml
server/account/: models.py  serializers.py  services.py  utils.py  views.py
server/account/migrations/: 0001_initial.py
server/assignment_project/: asgi.py  settings.py  urls.py  wsgi.py
server/job_description/: apps.py  models.py  serializers.py  tests.py  text_serach.py  views.py
server/job_description/migrations/: 0001_initial.py  0002_rename_job_description_user_job_descriptions_and_more.py  0003_alter_jobdescription_company.py
server/templates/assignment_templates/: index.html
server/templates/assignment_templates/assets/css/: HomeView-6934d56a.css  JobDescriptionView-5855e7cd.css  JobDescriptionView-716fe073.css  JobDescriptionView-d0874721.css  index-dfea6ee6.css
server/templates/assignment_templates/assets/js/: HomeView-1a6535b8.js  HomeView-30758bfc.js  HomeView-41a8902b.js  HomeView-5debddaf.js  HomeView-6e092444.js  HomeView-7021ee18.js  HomeView-7809f06b.js  HomeView-a00a4aa5.js  HomeView-d2e6ebdd.js  HomeView-fa71ff64.js  JobDescriptionView-0d03a4b2.js  JobDescriptionView-24fb2709.js  JobDescriptionView-2b3df9b9.js  JobDescriptionView-53cedac6.js  JobDescriptionView-5f2f1899.js  JobDescriptionView-a3977445.js  JobDescriptionView-b80b9a8b.js  JobDescriptionView-da5263b6.js  JobDescriptionView-e5ecaaa0.js  JobDescriptionView-e73c0fe4.js  index-01e34177.js  index-09370201.js  index-19a4bdfb.js  index-2ee57d59.js  index-387db12f.js  index-41f07b74.js  index-6265e688.js  index-7d2901c4.js  index-91605102.js  index-bb6a415c.js  index-cf50aa26.js  index-d560d250.js  index-d7f9cd18.js  index-de331972.js  index-ea25fb72.js  index-ff8eb59e.js
server/templates/job_description/: index.html
server/todo_app/: apps.py  models.py  views.py
server/todo_app/migrations/: 0001_initial.py
(+56 files in other folders)
