[tool.poetry]
name = "assignment"
version = "0.1.0"
description = ""
authors = ["LeeJiChan <bbster@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
djangorestframework = "^3.14.0"
django-filter = "^23.3"
psycopg2-binary = "^2.9.9"
django-rest-swagger = "^2.2.0"
drf-yasg = "^1.21.7"
django-cors-headers = "^4.3.0"
environ = "^1.0"
drf-spectacular = "^0.26.5"
ruff = "^0.1.3"
setuptools = "^68.2.2"

[tool.ruff]
line-length = 80
fix = true
ignore = ["F405", "E501", "B008", "C901", "A003", "B905"]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "COM", # flake8-commas
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "PT", # flake8-pytest-style
    "ASYNC", # flake8-async
    #    "PTH", # flake8-use-pathlib
    #    추후 적용하면 좋을 린팅
    #    "N", # pep8-naming
    #    "PL", # pylint
    #    "SIM", # flake8-simplify
    #    "ANN", # flake8-annotations
]
target-version = "py311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
